--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li> <a href="index.html">Home</a></li>
-        <li> <a href="Classes.html">Classes</a></li>
+        <li> <a href="classes.html">Classes</a></li>
       </ul>
     </nav>
     <section>
