--- a/classes.html
+++ b/classes.html
@@ -12,7 +12,7 @@
       </h1>
     </header>
     <nav>
-      <ul>
+      <ul class="links">
         <li>
           <a href="index.html">Home</a>
         </li>
